[gd_scene format=3 uid="uid://ohm0cadryckk"]

[ext_resource type="Script" uid="uid://dqgtehpdgp4ff" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://chjat7jo8iycx" path="res://male_hero_template.png" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://ddbl0t451ek0b" path="res://inv_placeholder.png" id="3_i3pqv"]
[ext_resource type="Texture2D" uid="uid://byksk1yef41sn" path="res://Red Placholder.png" id="4_hqtel"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_onrkg")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_onrkg")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_onrkg")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_onrkg")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_onrkg")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_onrkg")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_onrkg")
region = Rect2(896, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_onrkg")
region = Rect2(1024, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_onrkg")
region = Rect2(1152, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_onrkg")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("2_onrkg")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("2_onrkg")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_onrkg")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_onrkg")
region = Rect2(640, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_onrkg")
region = Rect2(768, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_onrkg")
region = Rect2(896, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("2_onrkg")
region = Rect2(1024, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("2_onrkg")
region = Rect2(1152, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_4flbx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" unique_id=1593526875]
script = ExtResource("1_onrkg")
recipes = Array[Dictionary]([{
"fabric_cost": 0,
"name": "Refined Metal",
"output_amount": 10,
"output_name": "metal",
"scrap_cost": 10
}, {
"fabric_cost": 10,
"name": "Bandage",
"output_amount": 1,
"output_name": "bandage",
"scrap_cost": 0
}])

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=789898183]
scale = Vector2(6.46, 6.46)
shape = SubResource("RectangleShape2D_hqtel")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1074056082]
process_callback = 0
position_smoothing_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1480860335]
texture_filter = 1
texture_repeat = 1
scale = Vector2(3.975, 3.975)
sprite_frames = SubResource("SpriteFrames_4flbx")
animation = &"idle"
frame_progress = 0.8509199

[node name="Inv" type="CanvasLayer" parent="." unique_id=2111573900]

[node name="InvControl" type="Control" parent="Inv" unique_id=804327599]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="Inv/InvControl" unique_id=446887558]
texture_filter = 1
texture_repeat = 1
position = Vector2(575, 330)
scale = Vector2(9.94, 9.94)
texture = ExtResource("3_i3pqv")

[node name="ScarpAmmount" type="Node2D" parent="Inv/InvControl/Sprite2D" unique_id=302221989]
position = Vector2(0, -0.50301814)

[node name="RedPlacholder" type="Sprite2D" parent="Inv/InvControl/Sprite2D/ScarpAmmount" unique_id=1926973772]
texture_filter = 1
texture_repeat = 1
position = Vector2(-36.619717, -16.096579)
scale = Vector2(0.27087516, 0.27087516)
texture = ExtResource("4_hqtel")

[node name="Button" type="Button" parent="Inv/InvControl/Sprite2D/ScarpAmmount/RedPlacholder" unique_id=280647415]
z_index = 1
offset_left = -20.055733
offset_top = -18.198713
offset_right = 14.519882
offset_bottom = -10.198713
scale = Vector2(4.75859, 4.75859)

[node name="RedPlacholder2" type="Sprite2D" parent="Inv/InvControl/Sprite2D/ScarpAmmount" unique_id=35990449]
texture_filter = 1
texture_repeat = 1
position = Vector2(-25.251507, -16.297787)
scale = Vector2(0.27087516, 0.27087516)
texture = ExtResource("4_hqtel")

[node name="RedPlacholder3" type="Sprite2D" parent="Inv/InvControl/Sprite2D/ScarpAmmount" unique_id=1937261046]
texture_filter = 1
texture_repeat = 1
position = Vector2(-14.788727, -16.096579)
scale = Vector2(0.27087516, 0.27087516)
texture = ExtResource("4_hqtel")

[node name="RedPlacholder4" type="Sprite2D" parent="Inv/InvControl/Sprite2D/ScarpAmmount" unique_id=311230880]
texture_filter = 1
texture_repeat = 1
position = Vector2(-3.4205246, -16.297787)
scale = Vector2(0.27087516, 0.27087516)
texture = ExtResource("4_hqtel")

[connection signal="pressed" from="Inv/InvControl/Sprite2D/ScarpAmmount/RedPlacholder/Button" to="." method="_on_button_pressed"]
